--- a/frontend/src/assets/styles/dashboard.css
+++ b/frontend/src/assets/styles/dashboard.css
@@ -171,43 +171,44 @@
   padding-left: 7vw;
   padding-top: 10px;
 }
-.modal-footer button{
+.modal-footer button {
   background-color: black;
-  border:none;
+  border: none;
   padding: 5px;
 }
 
-@media only screen and (max-width:600px){
-  .blogs-container{
+@media only screen and (max-width: 600px) {
+  .blogs-container {
     padding: 0px;
     margin: 0px;
     display: flex;
     flex-direction: column;
   }
-  .blog{
+  .blog {
     width: 90vw;
-    height: 60vh;
+    height: 62vh;
   }
-  .blog-info{
+  .blog-info {
     width: 90vw;
     height: 20vh;
   }
-  .blog-p{
-    padding: 0;
+  .blog-p {
+    padding: 10px;
+    width: 90vw;
+    overflow: hidden;
     margin: 0;
   }
-  .creatBlog{
+  .creatBlog {
     width: 90vw;
     padding-bottom: 10px;
   }
-  .create-blog-form{
-    padding-bottom: 10px;
-    margin-bottom: 10px;
-  }
-  .description{
+  .description {
     width: 80vw;
   }
-  .ql-toolbar{
-
+  .ql-editor p {
+    max-height: 20vh;
+  }
+  .blog-header{
+    text-align: center;
   }
 }
